--- a/styles.css
+++ b/styles.css
@@ -26,16 +26,16 @@ body{
     margin: 200px auto;
 }
 
-.container *{
-}
+
 
 .container p{
-    font-weight: 400
-    line-height: ;
+    font-weight: 400;
+    line-height: 1.5em;
     font-size: 18px;
     margin-top: 15px;
 
 }
+
 .card-image{
     max-width: 100%;
     border-radius: 12px;
